# roleypoly

./: .babelrc.js  .bazelrc  .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  docker-compose.yaml  go.mod  go.sum  go_dependencies.bzl  jest-reporter.js  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.stories.json  tsconfig.test.json  tslint.json  vercel.json
.devcontainer/: BUILD.bazel  Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  dev-container.yml  gar-cleanup.yml  release.yml  terraform.yml
.storybook/: main.js  manager.js  preview-head.html  preview.js  theme.js
docs/: getting-started.md  infrastructure.md  user-stories.md
hack/: gazelle.sh  generate.go  generate_versions.sh  jest.bzl  jestSetup.ts  publish.bzl  react.bzl  tsproto.bzl  utils.bzl  workspace_status.sh
hack/bazel/: utils.bzl
hack/bazel/js/: jest.bzl  proto.bzl  react.bzl
hack/dev-container/: BUILD.bazel  README.md
hack/dockerfiles/: bot.Dockerfile  dev-container.Dockerfile  legacy.Dockerfile  ui.Dockerfile
hack/fixtures/: BUILD.bazel  demoData.ts  storyData.ts
hack/functions-local/: README.md  main.go
src/backend-emulator/: kv.js  main.js
src/backend-worker/: bindings.d.ts  index.ts  roleypoly.config.js  router.ts  tsconfig.json  webpack.config.js
src/backend-worker/handlers/: bot-join.ts  create-roleypoly-data.ts  get-picker-data.ts  get-session.ts  get-slug.ts  login-bounce.ts  login-callback.ts  revoke-session.ts  (+1 more)
src/common/: BUILD.bazel  await-exit.go  envconfig.go  envconfig_test.go  finders.go  finders_test.go
src/common/bot/: BUILD.bazel  commandmux.go  scaffolding.go
src/common/faas/: auth.go  bounce.go  fingerprint.go
src/common/types/: Guild.ts  Role.ts  User.go  User.ts  index.ts  session.go  storyData.ts  tokens.go
src/common/utils/: BUILD.bazel  hasPermission.spec.ts  hasPermission.ts  isomorphicFetch.ts  protoReflection.spec.ts  protoReflection.ts  sortBy.spec.ts  sortBy.ts
src/common/utils/featureFlags/go/: featureflags.go
src/common/utils/featureFlags/react/: BUILD.bazel
src/common/utils/withContext/: BUILD.bazel  contextTestHelpers.tsx  index.ts  withContext.tsx
src/common/version/: BUILD.bazel  version.go  version_test.go
src/db/: LICENSE  README.md
src/db/cmd/db-tool/: BUILD.bazel  Dockerfile  docker-compose.yaml  import.go  migrate.go
src/db/ent/: BUILD.bazel  challenge.go  challenge_create.go  challenge_delete.go  challenge_query.go  challenge_update.go  client.go  config.go  guild.go  guild_create.go  guild_delete.go  guild_query.go  guild_update.go  mutation.go  runtime.go  session.go  session_create.go  session_delete.go  session_query.go  session_update.go  tx.go
src/db/ent/challenge/: BUILD.bazel  challenge.go  where.go
src/db/ent/enttest/: BUILD.bazel  enttest.go
src/db/ent/guild/: BUILD.bazel  guild.go  where.go
src/db/ent/hook/: BUILD.bazel  hook.go
src/db/ent/migrate/: BUILD.bazel  schema.go
src/db/ent/predicate/: BUILD.bazel  predicate.go
src/db/ent/privacy/: BUILD.bazel  privacy.go
src/db/ent/runtime/: BUILD.bazel  runtime.go
src/db/ent/schema/: BUILD.bazel  challenge.go  guild.go  session.go
src/db/ent/session/: BUILD.bazel  session.go  where.go
src/design-system/: BUILD.bazel  Intro.stories.mdx  README.md
src/design-system/atoms/avatar/: Avatar.stories.tsx  Avatar.styled.ts  Avatar.tsx  BUILD.bazel  avatarUtils.tsx  index.ts
src/design-system/atoms/breakpoints/: BUILD.bazel  BreakpointProvider.tsx  Breakpoints.stories.tsx  Breakpoints.ts  Context.ts  DebugTool.tsx  index.ts
src/design-system/atoms/button/: BUILD.bazel  Button.spec.tsx  Button.stories.tsx  Button.story.tsx  Button.styled.ts  Button.tsx
src/dev-container/: BUILD.bazel  README.md
src/discord-auth/: BUILD.bazel  README.md  discord-auth.go
src/discord-auth/http/: BUILD.bazel  httpservice.go  httpservice_test.go  oauth.go  oauth_test.go
src/discord-bot/: .gitignore  BUILD.bazel  discordbot.go  listener.go
src/discord-bot/internal/strings/: BUILD.bazel  renderer.go  strings.go
src/gripkit/: BUILD.bazel  gripkit.go  options.go
src/jstest/: BUILD.bazel  index.ts
src/midori/: BUILD.bazel  README.md  midori.go
src/midori/internal/commands/gh/: BUILD.bazel  gh.go
src/midori/internal/commands/helpers/: BUILD.bazel  permissions.go
src/midori/internal/commands/tfc/: BUILD.bazel  tfc.go
src/midori/internal/config/: BUILD.bazel  config.go
src/pages/: _app.tsx  _document.tsx  index.tsx  servers.tsx
src/pages-deprecated/: README.md  _app.tsx  index.tsx  servers.tsx
src/providers/: appShellData.tsx
src/redis-breaker/: redisbreaker.go  redisbreaker_test.go
src/rpc/auth/: BUILD.bazel  shared.proto
src/rpc/auth/backend/: BUILD.bazel  auth-backend.proto
src/rpc/auth/client/: BUILD.bazel  auth-client.proto
src/rpc/ctf/: BUILD.bazel  ctf.proto
src/rpc/discord/: BUILD.bazel  discord.proto
src/rpc/platform/: BUILD.bazel  platform.proto
src/rpc/shared/: BUILD.bazel  internal.proto  shared.proto
src/ts-protoc-gen/: BUILD.bazel  CodePrinter.ts  ExportMap.ts  Printer.ts  WellKnown.ts  index.ts  parameters.ts  util.ts
src/ts-protoc-gen/rules/: BUILD.bazel  change_import_style.ts  index.bzl
src/ts-protoc-gen/service/: common.ts  grpcnode.ts  grpcweb.ts
src/ts-protoc-gen/ts/: FieldTypes.ts  enum.ts  extensions.ts  fileDescriptorTSD.ts  message.ts  oneof.ts
standards/: cicd.md
terraform/: .gitignore  .terraform.lock.hcl  api.tf  bot.tf  cloudflare-origin-cert.tf  interactions.tf  mappings.tf  providers.tf  variables.tf  webapp.tf  weblb.tf  workers.tf
terraform/app/: discord.tf  provision.tf  tags.auto.tfvars.json  variables.tf
terraform/functions/: .terraform.lock.hcl  cloud-function.tf  provision.tf
terraform/variables/: .gitignore  global.tfvars  prod.tfvars  stage.tfvars
terraform/worker-dist/: api.js  interactions.js
types/: wojtekmaj__enzyme-adapter-react-17.d.ts
(+296 files in other folders)
