load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "await-exit.go",
        "envconfig.go",
        "finders.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/common",
    visibility = ["//visibility:public"],
)

go_test(
    name = "common_test",
    srcs = [
        "envconfig_test.go",
        "finders_test.go",
    ],
    embed = [":common"],
)
