load("//:hack/publish.bzl", "publish")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_run_and_commit_layer(
    name = "bazel-layer",
    commands = [
        "go get -u github.com/bazelbuild/bazelisk",
        "ln /go/bin/bazelisk /usr/bin/bazel",
        "go get -u github.com/bazelbuild/buildtools/...",
    ],
    image = "@devcontainergo//image",
)

container_run_and_commit_layer(
    name = "node-layer",
    commands = [
        "su vscode -c 'source /usr/local/share/nvm/nvm.sh && nvm install lts/* 2>&1'",
    ],
    image = "@devcontainergo//image",
)

container_image(
    name = "dev-container",
    base = "@devcontainergo//image",
    layers = [
        ":bazel-layer",
        ":node-layer",
    ],
)

publish(
    name = "publish-dev-container",
    image = ":dev-container",
    service = "dev-container",
)

publish(
    name = "publish-dev-container-dockerhub",
    image = ":dev-container",
    prefix = "roleypoly/",
    registry = "index.docker.io",
    service = "dev-container",
)
