load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "discord-auth_lib",
    srcs = ["discord-auth.go"],
    importpath = "github.com/roleypoly/roleypoly/src/discord-auth",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_fx//:fx"],
)

go_binary(
    name = "discord-auth",
    embed = [":discord-auth_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":discord-auth_lib"],
    visibility = ["//visibility:private"],
)

container_push(
    name = "+publish",
    format = "Docker",
    image = ":image",
    registry = "docker.pkg.github.com",
    repository = "roleypoly/roleypoly/discord-auth",
    tag = "{STABLE_GIT_BRANCH}",
)
