load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//:hack/publish.bzl", "publish")

go_library(
    name = "discord-auth_lib",
    srcs = ["discord-auth.go"],
    importpath = "github.com/roleypoly/roleypoly/src/discord-auth",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common/version",
        "//src/discord-auth/http",
        "@com_github_julienschmidt_httprouter//:httprouter",
        "@io_k8s_klog//:klog",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "discord-auth",
    embed = [":discord-auth_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":discord-auth_lib"],
    visibility = ["//visibility:private"],
)

publish(
    service = "midori",
)
