load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "discord-bot_lib",
    srcs = [
        "discordbot.go",
        "listener.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/discord-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common/version",
        "//src/discord-bot/internal/strings",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_joho_godotenv//autoload",
        "@com_github_lampjaw_discordclient//:discordclient",
        "@io_k8s_klog//:klog",
    ],
)

go_binary(
    name = "discord-bot",
    embed = [":discord-bot_lib"],
    visibility = ["//visibility:private"],
)

go_image(
    name = "image",
    embed = [":discord-bot_lib"],
    visibility = ["//visibility:private"],
)

container_push(
    name = "+publish",
    format = "Docker",
    image = ":image",
    registry = "docker.pkg.github.com",
    repository = "roleypoly/roleypoly/discord-bot",
    tag = "{STABLE_GIT_BRANCH}",
)
