load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:hack/publish.bzl", "publish")

go_library(
    name = "discord-bot_lib",
    srcs = [
        "discordbot.go",
        "listener.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/discord-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common",
        "//src/common/bot",
        "//src/common/version",
        "//src/discord-bot/internal/strings",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_joho_godotenv//autoload",
        "@com_github_lampjaw_discordclient//:discordclient",
        "@io_k8s_klog//:klog",
    ],
)

go_binary(
    name = "discord-bot",
    embed = [":discord-bot_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":discord-bot_lib"],
    visibility = ["//visibility:private"],
)

publish(
    service = "discord-bot",
)
