load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//:hack/publish.bzl", "publish")

go_library(
    name = "midori_lib",
    srcs = ["midori.go"],
    importpath = "github.com/roleypoly/roleypoly/src/midori",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common/bot",
        "//src/common/version",
        "//src/midori/internal/commands/gh",
        "//src/midori/internal/commands/tfc",
        "//src/midori/internal/config",
        "@com_github_bwmarrin_discordgo//:discordgo",
        "@com_github_joho_godotenv//autoload",
        "@io_k8s_klog//:klog",
    ],
)

go_binary(
    name = "midori",
    embed = [":midori_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":midori_lib"],
    visibility = ["//visibility:private"],
)

publish(
    service = "midori",
)
