load("//:hack/react.bzl", "react_library")
load("//:hack/jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

react_library(
    name = "utils",
    deps = [
        "chroma-js",
        "react",
        "styled-components",
        "//src/rpc/shared",
        "@types/chroma-js",
        "@types/react",
        "@types/styled-components",
    ],
)

jest_test(
    src = ":utils",
    deps = [
        "//hack/fixtures",
        "//src/rpc/shared",
    ],
)
