load("//hack/bazel/js:react.bzl", "react_library")
load("//hack/bazel/js:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

react_library(
    name = "utils",
    deps = [
        "chroma-js",
        "//src/rpc/shared",
        "@types/chroma-js",
    ],
)

jest_test(
    src = ":utils",
    deps = [
        "//src/design-system/shared-types",
        "//src/rpc/shared",
    ],
)
