load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/roleypoly/roleypoly/src/common/version",
    visibility = ["//visibility:public"],
    x_defs = {
        "GitCommit": "{STABLE_GIT_COMMIT}",
        "GitBranch": "{STABLE_GIT_BRANCH}",
        "BuildDate": "{BUILD_DATE}",
    },
)

go_test(
    name = "version_test",
    srcs = ["version_test.go"],
    embed = [":version"],
)
