load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ent",
    srcs = [
        "challenge.go",
        "challenge_create.go",
        "challenge_delete.go",
        "challenge_query.go",
        "challenge_update.go",
        "client.go",
        "config.go",
        "context.go",
        "ent.go",
        "generate.go",
        "guild.go",
        "guild_create.go",
        "guild_delete.go",
        "guild_query.go",
        "guild_update.go",
        "mutation.go",
        "runtime.go",
        "session.go",
        "session_create.go",
        "session_delete.go",
        "session_query.go",
        "session_update.go",
        "tx.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/db/ent",
    visibility = ["//visibility:public"],
    deps = [
        "//src/db/ent/challenge",
        "//src/db/ent/guild",
        "//src/db/ent/migrate",
        "//src/db/ent/predicate",
        "//src/db/ent/schema",
        "//src/db/ent/session",
        "@com_github_facebook_ent//:go_default_library",
        "@com_github_facebook_ent//dialect:go_default_library",
        "@com_github_facebook_ent//dialect/sql:go_default_library",
        "@com_github_facebook_ent//dialect/sql/sqlgraph:go_default_library",
        "@com_github_facebook_ent//schema/field:go_default_library",
    ],
)
