load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = [
        "httpservice.go",
        "oauth.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/discord-auth/http",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_julienschmidt_httprouter//:httprouter",
        "@com_github_segmentio_ksuid//:ksuid",
    ],
)

go_test(
    name = "http_test",
    srcs = [
        "httpservice_test.go",
        "oauth_test.go",
    ],
    embed = [":http"],
    deps = ["@com_github_julienschmidt_httprouter//:httprouter"],
)
