load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

proto_library(
    name = "auth_proto",
    srcs = ["shared.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "auth_go_proto",
    importpath = "github.com/roleypoly/roleypoly/src/rpc/auth",
    proto = ":auth_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "auth",
    embed = [":auth_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/auth",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "ts",
    proto = ":auth_proto",
)
