load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

proto_library(
    name = "ctf_proto",
    srcs = ["ctf.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

go_proto_library(
    name = "ctf_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/ctf",
    proto = ":ctf_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "ctf",
    embed = [":ctf_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/ctf",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "ts",
    proto = ":ctf_proto",
)
