load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//:hack/tsproto.bzl", "ts_proto")

proto_library(
    name = "ctf_proto",
    srcs = ["ctf.proto"],
    visibility = ["//visibility:public"],
    deps = ["//src/rpc/shared:shared_proto"],
)

go_proto_library(
    name = "ctf_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/ctf",
    proto = ":ctf_proto",
    visibility = ["//visibility:public"],
    deps = ["//src/rpc/shared"],
)

go_library(
    name = "ctf",
    embed = [":ctf_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/ctf",
    visibility = ["//visibility:public"],
)

ts_proto(
    proto = ":ctf_proto",
)
