load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//:hack/tsproto.bzl", "ts_proto")

package(default_visibility = [
    "//hack/fixtures:__subpackages__",
])

proto_library(
    name = "discord_proto",
    srcs = ["discord.proto"],
    visibility = ["//visibility:public"],
    deps = ["//src/rpc/shared:shared_proto"],
)

go_proto_library(
    name = "discord_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/discord",
    proto = ":discord_proto",
    visibility = ["//visibility:public"],
    deps = ["//src/rpc/shared"],
)

go_library(
    name = "discord",
    embed = [":discord_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/discord",
    visibility = ["//visibility:public"],
)

ts_proto(
    grpc = True,
    proto = ":discord_proto",
)
