load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

proto_library(
    name = "platform_proto",
    srcs = ["platform.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/rpc/discord:discord_proto",
        "//src/rpc/shared:shared_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "platform_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/platform",
    proto = ":platform_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//src/rpc/discord",
        "//src/rpc/shared",
    ],
)

go_library(
    name = "platform",
    embed = [":platform_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/platform",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "ts",
    proto = ":platform_proto",
)
