load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_typescript_proto//:index.bzl", "typescript_proto_library")

proto_library(
    name = "shared_proto",
    srcs = [
        "internal.proto",
        "shared.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "shared_go_proto",
    importpath = "github.com/roleypoly/roleypoly/src/rpc/shared",
    proto = ":shared_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "shared",
    embed = [":shared_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/shared",
    visibility = ["//visibility:public"],
)

typescript_proto_library(
    name = "ts",
    proto = ":shared_proto",
)
