load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//hack/bazel/js:proto.bzl", "ts_proto")

proto_library(
    name = "shared_proto",
    srcs = [
        "internal.proto",
        "shared.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "shared_go_proto",
    importpath = "github.com/roleypoly/roleypoly/src/rpc/shared",
    proto = ":shared_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "shared",
    embed = [":shared_go_proto"],
    importpath = "github.com/roleypoly/roleypoly/src/rpc/shared",
    visibility = ["//visibility:public"],
)

ts_proto(
    proto = ":shared_proto",
)
