load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = [
        "migrate.go",
        "schema.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/db/ent/migrate",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_facebook_ent//dialect",
        "@com_github_facebook_ent//dialect/sql/schema",
        "@com_github_facebook_ent//schema/field",
    ],
)
