load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "challenge.go",
        "guild.go",
        "session.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/db/ent/schema",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_facebook_ent//:go_default_library",
        "@com_github_facebook_ent//schema/field:go_default_library",
        "@com_github_facebook_ent//schema/mixin:go_default_library",
    ],
)
