load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "challenge.go",
        "guild.go",
        "session.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/db/ent/schema",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_facebook_ent//:ent",
        "@com_github_facebook_ent//schema/field",
        "@com_github_facebook_ent//schema/mixin",
    ],
)
