load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "session",
    srcs = [
        "session.go",
        "where.go",
    ],
    importpath = "github.com/roleypoly/roleypoly/src/db/ent/session",
    visibility = ["//visibility:public"],
    deps = [
        "//src/db/ent/predicate",
        "@com_github_facebook_ent//dialect/sql:go_default_library",
    ],
)
