load("//:hack/react.bzl", "react_library")

package(default_visibility = ["//visibility:public"])

react_library(
    name = "breakpoints",
    deps = [
        "react",
        "styled-components",
        "//src/common/utils/withContext",
        "@types/react",
        "@types/styled-components",
    ],
)
