load("//:hack/react.bzl", "react_library")

package(default_visibility = ["//visibility:public"])

react_library(
    name = "button",
    deps = [
        "react",
        "styled-components",
        "//src/design-system/atoms/colors",
        "//src/design-system/atoms/fonts",
        "//src/design-system/atoms/typography",
        "@types/react",
        "@types/styled-components",
    ],
)
