load("//hack/bazel/js:react.bzl", "react_library")
load("//hack/bazel/js:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

react_library(
    name = "button",
    deps = [
        "//src/design-system/atoms/colors",
        "//src/design-system/atoms/fonts",
        "//src/design-system/atoms/typography",
    ],
)

jest_test(
    src = ":button",
)
